--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>Hello world!
-&lt;!–This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
+        <div class="home"><p>Hello world! 
+<!--This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.--></p>
 
-<p><img src="/mlblog/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
+<!--![](/mlblog/images/diagram.png "https://github.com/fastai/fastpages")-->
 
-<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
+<!--[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages). -->
 
-<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.–&gt;</p>
+<!--You can edit the `index.html` file to change this content.-->
 
 <h1 id="posts">Posts</h1>
 
