deploy: 87e63400982d9744525cd6bc05590657ae32f915

--- a/about/index.html
+++ b/about/index.html
@@ -79,6 +79,16 @@ window.onload = wrap_img;
 &quot;I checked it very thoroughly,&quot; said the computer, &quot;and that quite definitely is the answer. I think the problem, to be quite honest with you, is that you've never actually known what the question is.&quot;
 </p>
 
+<p>I’m a physicist, a string theorist by training, and I work in various aspects of data science, and string theory.</p>
+
+<p>I started work in machine learning as a means to address open problems in theoretical physics, and am now interested in broader applications in the industry as well.</p>
+
+<p>I usually work in Keras, and TensorFlow with dalliances in FastAI.</p>
+
+<p>As for my work in string theory, I work on the AdS/CFT correspondence. Since its proposal in the 1990s this correspondence has provided profound insights into black holes, the nature of spacetime, how fluids flow, and the like.</p>
+
+<p>I work on explaining how this correspondence comes into being.</p>
+
 <!--This website is powered by **[fastpages](https://github.com/fastai/fastpages)** [^1].-->
 
 <!--[^1]:a blogging platform that natively supports Jupyter notebooks in addition to other formats.-->
