--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@ layout: home
 search_exclude: true
 image: images/logo.png
 ---
-Hello world! 
+Hello and welcome to my page! I am Shailesh, a physicist working on machine learning, data science and string theory. 
+I will write about projects that interest me in data science, as well as data science aspects of some projects in physics 
+and mathematical physics that I am doing/have done/hope to do.
+
 <!--This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.-->
 
 <!--![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")-->
