deploy: dfad1a83ec7dbfb89d380e5c51f157cf49da250c

--- a/index.html
+++ b/index.html
@@ -67,8 +67,11 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>Hello world! 
-<!--This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.--></p>
+        <div class="home"><p>Hello and welcome to my page! I am Shailesh, a physicist working on machine learning, data science and string theory. 
+I will write about projects that interest me in data science, as well as data science aspects of some projects in physics 
+and mathematical physics that I am doing/have done/hope to do.</p>
+
+<!--This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.-->
 
 <!--![](/mlblog/images/diagram.png "https://github.com/fastai/fastpages")-->
 
